@@ -61,28 +61,56 @@ struct XServerLocalPrivate
 
 G_DEFINE_TYPE (XServerLocal, xserver_local, XSERVER_TYPE);
 
-static guint
-get_free_display_number (void)
+static GList *display_numbers = NULL;
+
+static gboolean
+display_number_in_use (guint display_number)
+{
+    GList *link;
+    gchar *path;
+    gboolean result;
+
+    for (link = display_numbers; link; link = link->next)
+    {
+        guint number = GPOINTER_TO_UINT (link->data);
+        if (number == display_number)
+            return TRUE;
+    }
+
+    path = g_strdup_printf ("/tmp/.X%d-lock", display_number);
+    result = g_file_test (path, G_FILE_TEST_EXISTS);
+    g_free (path);
+
+    return result;
+}
+
+guint
+xserver_local_get_unused_display_number (void)
 {
     guint number;
 
     number = config_get_integer (config_get_instance (), "LightDM", "minimum-display-number");
-    while (TRUE)
-    {
-        gchar *path;
-        gboolean result;
-  
-        path = g_strdup_printf ("/tmp/.X%d-lock", number);
-        result = g_file_test (path, G_FILE_TEST_EXISTS);
-        g_free (path);
-
-        if (!result)
-            break;
-
+    while (display_number_in_use (number))
         number++;
-    }
-  
+
+    display_numbers = g_list_append (display_numbers, GUINT_TO_POINTER (number));
+
     return number;
+}
+
+void
+xserver_local_release_display_number (guint display_number)
+{
+    GList *link;
+    for (link = display_numbers; link; link = link->next)
+    {
+        guint number = GPOINTER_TO_UINT (link->data);
+        if (number == display_number)
+        {
+            display_numbers = g_list_remove_link (display_numbers, link);
+            return;
+        }
+    }
 }
 
 XServerLocal *
@@ -91,7 +119,7 @@ xserver_local_new (void)
     XServerLocal *self = g_object_new (XSERVER_LOCAL_TYPE, NULL);
     gchar *name;
 
-    xserver_set_display_number (XSERVER (self), get_free_display_number ());
+    xserver_set_display_number (XSERVER (self), xserver_local_get_unused_display_number ());
 
     name = g_strdup_printf ("x-%d", xserver_get_display_number (XSERVER (self)));
     display_server_set_name (DISPLAY_SERVER (self), name);
@@ -268,6 +296,8 @@ stopped_cb (Process *process, XServerLocal *server)
     g_object_unref (server->priv->xserver_process);
     server->priv->xserver_process = NULL;
 
+    xserver_local_release_display_number (xserver_get_display_number (XSERVER (server)));
+  
     if (xserver_get_authority (XSERVER (server)) && server->priv->authority_file)
     {
         GError *error = NULL;
