@@ -14,6 +14,7 @@ Overview of changes in lightdm 0.9.8
     * Allow lightdm --version to be run as non-root
     * Automatically respond to PAM messages without prompts
     * Create 'AddLocalXSeat' D-Bus method, and require root to use 'AddSeat'
+    * Fix multi-seat configuration picking the same display number
 
 Overview of changes in lightdm 0.9.7
 
